# TEN-Project

./: CMakeLists.txt  ControlBlock.h  DiscreteLogarithm.h  Error.c  Error.h  FactorBase.h  GMPBuffer.c  GMPBuffer.h  GMPCommon.h  MathCommon.h  MathCommon_test.h  NumberBuffer_test.h  README.md  ThirdPhase.h  UserInput.c  UserInput.h  main.c  routine_test.h  routines.c  routines.h
Algorithms/: PollardSRho.c  PollardSRho.h
ApplicationBuffer/: ApplicationBuffer.c  ApplicationBuffer.h
Buffers/: ApplicationBuffer.c  ApplicationBuffer.h  CircularBuffer.c  CircularBuffer.h  NumbersBuffer.c  NumbersBuffer.h
Common/: SynchronizationPrimitives.h
DLogIndexMethod/: DLogProblemInstance.c  DLogProblemInstance.h  DiscreteLogarithm.c  DiscreteLogarithm.h  FactorBase.c  FactorBase.h  FirstPhase.c  FirstPhase.h  RelationsRetrieval.c  RelationsRetrieval.h  SecondPhase.c  SecondPhase.h  ThirdPhase.c  ThirdPhase.h
DataStructure/: SemiLockFreeQueue.c  SemiLockFreeQueue.h
DataStructures/: UnorderedList.c  UnorderedList.h
Error/: Error.c
GMPCommon/: GMPNumberOrderedList.c  GMPNumberOrderedList.h
IndexCalculusAlgorithm/: DLogProblemInstance.c  DLogProblemInstance.h  DiscreteLogarithm.c  DiscreteLogarithm.h  FactorBase.c  FactorBase.h  RelationsRetrieval.c  RelationsRetrieval.h  UserInput.c  UserInput.h
IndexCalculusAlgorithm/AlgorithmSteps/: FirstStep.c  FirstStep.h  SecondStep.c  SecondStep.h  ThirdStep.c  ThirdStep.h
Logger/: Logger.c  Logger.h
Math/: Common.c  Common.h  Factor.c  Factor.h  Factorization.c  Factorization.h  Matrix.c  Matrix.h  Number.c  Number.h  NumberBuffer.h  NumberBuffer_test.h  OrderedFactorList.c  OrderedFactorList.h  RandomNumber.c  RandomNumber.h
Test/: PollardRhoTest.h  Tests.h
ThreadsPool/: ThreadsPool.c  ThreadsPool.h
Trash/: Logger.c  Logger.h  MathCommon.h  MathCommon_test.h
Trash/Error/: Error.h
